source3/utils/passwd_util.c
@@ -42,11 +42,12 @@ char *stdin_new_passwd( void)
 	 * the newline that ends the password, then replace the newline with
 	 * a null terminator.
 	 */
-	if ( fgets(new_pw, sizeof(new_pw), stdin) != NULL) {
-		if ((len = strlen(new_pw)) > 0) {
-			if(new_pw[len-1] == '\n')
-				new_pw[len - 1] = 0;
-		}
+	if ( fgets(new_pw, sizeof(new_pw), stdin) == NULL) {
+		return NULL;
+	}
+	if ((len = strlen(new_pw)) > 0) {
+		if(new_pw[len-1] == '\n')
+			new_pw[len - 1] = 0;
 	}
 	return(new_pw);
 }
@@ -61,6 +62,9 @@ char *get_pass( const char *prompt, bool stdin_get)
 	char *p;
 	if (stdin_get) {
 		p = stdin_new_passwd();
+		if (p == NULL) {
+			return NULL;
+		}
 	} else {
 		p = getpass( prompt);
 	}
